--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 EMAIL=bsc-com-11-19@unima.ac.mw
 EMAIL_PASSWORD=Jexy@2021
-DB_HOST=localhost
-DB_USER=postgres
-DB_DATABASE=jobs
-DB_PASSWORD=Jexy@2021
+DB_HOST=dpg-cq421gjv2p9s73egm1p0-a
+DB_USER=obi_user
+DB_DATABASE=obi
+DB_PASSWORD=fs4SBwhowPmMDuodLRgV6CndSk1TNXrVyy
 DB_PORT=5432
